test/Fail/Sections-3.err
Sections-3.agda:5.1-12: error: [NoParseForLHS]
Could not parse the left-hand side test c x c_
Operators used in the grammar:
  c_c (prefix operator, level 20) [c_c_ (Sections-3.agda:2.3-7)]
when scope checking the left-hand side test c x c_ in the
definition of test
